work 06.09.2026